# Allocators

./: CMakeLists.txt  README.md  benchmark_setup.bat  generate_vs_project.py  main.cpp  run_parallel_tests.py  setup_gtest.bat  utils.h
BuddyAllocator/: BuddyAllocator.h  BuddyAllocator.hpp  ThreadingPolicies.h
LinearAllocator/: LinearAllocator.h
SmallObjectAllocator/: Chunk.cpp  Chunk.h  FixedAllocator.cpp  FixedAllocator.h  PolicyClasses.h  SmallObject.h  SmallObjectAllocator.cpp  SmallObjectAllocator.h  SmallObjectAllocator.hpp  SmallObjectAllocatorSingleton.h  SmallObjectBase.h  SmallValueObject.h
Tests/: Benchmark.h  BuddyAllocatorTests.cpp  CMakeLists.txt  SmallObjectAllocatorTests.cpp  Tests.cpp
